crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__match__as_pattern_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/match/as_pattern_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..198,
        body: [
            Match(
                StmtMatch {
                    range: 0..147,
                    subject: Name(
                        ExprName {
                            range: 6..13,
                            id: "subject",
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 127..147,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 133..139,
                                    pattern: Some(
                                        MatchAs(
                                            PatternMatchAs {
                                                range: 133..134,
                                                pattern: None,
                                                name: Some(
                                                    Identifier {
                                                        id: "x",
                                                        range: 133..134,
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    name: Some(
                                        Identifier {
                                            id: "y",
                                            range: 138..139,
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                AnnAssign(
                                    StmtAnnAssign {
                                        range: 140..147,
                                        target: Tuple(
                                            ExprTuple {
                                                range: 140..146,
                                                elts: [
                                                    Name(
                                                        ExprName {
                                                            range: 141..142,
                                                            id: "a",
                                                            ctx: Store,
                                                        },
                                                    ),
                                                    Name(
                                                        ExprName {
                                                            range: 144..145,
                                                            id: "b",
                                                            ctx: Store,
                                                        },
                                                    ),
                                                ],
                                                ctx: Store,
                                                parenthesized: true,
                                            },
                                        ),
                                        annotation: Name(
                                            ExprName {
                                                range: 147..147,
                                                id: "",
                                                ctx: Invalid,
                                            },
                                        ),
                                        value: None,
                                        simple: false,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Pass(
                StmtPass {
                    range: 193..197,
                },
            ),
        ],
    },
)
```
## Errors

  |
3 |     #            class pattern
4 |     #            v
5 |     case (x as y)(a, b):
  |                  ^ Syntax Error: expected Colon, found Lpar
6 |     #     ^^^^^^
7 |     #    as-pattern
  |


  |
3 |     #            class pattern
4 |     #            v
5 |     case (x as y)(a, b):
  |                         ^ Syntax Error: Expected an expression
6 |     #     ^^^^^^
7 |     #    as-pattern
8 |         pass
  |


  |
6 |     #     ^^^^^^
7 |     #    as-pattern
8 |         pass
  | ^^^^^^^^ Syntax Error: expected Dedent, found Indent
  |


  |
7 |     #    as-pattern
8 |         pass
  |
